--- a/design_four.html
+++ b/design_four.html
@@ -3,24 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design_four</title>
+    <title>Login-Sunassist</title>
     <link rel="stylesheet" href="design_four.css">
 </head>
 <body>
     <div class="background">
+        <div class="logo">
+            <img src="sunassist-login-logo.png" width="50%">
+        </div>
         <div class="main_box">
             <div class="main_box_content">
-                <h1 class="main_box_content_top">Login in to continue</h1>
-                <p class="main_box_content_left">Email</p>
-                <input class="main_box_content_left" type="text" placeholder="Enter your email ID">
-                <p class="main_box_content_left">password</p>
-                <input class="main_box_content_left" type="text" placeholder="Enter your password">
+                <h1 class="main_box_content_top">Log in to continue</h1>
+                <div class="input_box">
+                    <div class="input_box_1">
+                        <label>Email</label>
+                        <input class="main_box_content_left_input" type="text" placeholder="Enter your email ID">
+                    </div>
+                    <div class="input_box_2">
+                        <label >Password</label>
+                        <input class="main_box_content_left_input" type="text" placeholder="Enter your password">
+                    </div>
+                </div>
                 <p class="main_box_content_right" >Forgot password?</p>
-                <a  class="main_box_content_login" href="design_five.html"> <button>login</button></a>
+                <a  class="main_box_content_login" href="design_five.html"> <button>Login</button></a>
             </div>
-
         </div>
-    </div>
-    
+    </div>   
 </body>
 </html>
