--- a/design_three.html
+++ b/design_three.html
@@ -10,14 +10,16 @@
     <div class="main">
         <div class="background_img">
             <div class="background_color">
-                <div class="upper_nav_left">
-                    <p>BHAVANA</p>
-                </div>
-                <div class="upper_nav_right">
-                    <p>HOME</p>
-                    <p>ABOUT US</p>
-                    <p>CONTACT</p>
-                    <p>WORK DEMOS</p>
+                <div class="upper_nav">
+                    <div class="upper_nav_left">
+                        <p>BHAVANA</p>
+                    </div>
+                    <div class="upper_nav_right">
+                        <p>HOME</p>
+                        <p>ABOUT US</p>
+                        <p>CONTACT</p>
+                        <p>WORK DEMOS</p>
+                    </div>
                 </div>
                 <div class="center_text">
                     <p> HELLO, WELCOME TO</p>
