--- a/fb.html
+++ b/fb.html
@@ -30,12 +30,16 @@
             <header class="login">
                 <button>Log In</button>
             </header>
+            <header class="create-new-acc">
+                <button><a href="#signup">CREATE NEW ACCOUNT</a></button>
+
+            </header>
         </header> 
     </header>
     <main class="background">
         <main class="box-left">
             <main class="head-text">
-                <h2>Connect with friendsand the <br> world around you on Facebook.</h2>
+                <h2>Connect with friends and the <br> world around you on Facebook.</h2>
                 <h4 class="sub-text-1">See photos and updates  <label> from friends in News Feed</label></h4>
                 <h4 class="sub-text-2">Share what's new  <label>in your life  on your timeline</label></h4>
                 <h4 class="sub-text-2">Find more  <label> of what you're looking for with graph search </label></h4>
@@ -43,7 +47,9 @@
         </main>
         <main class="box-right">
             <main class="head-text-right">
-                <h1>Sign Up</h1>
+                <section id="signup">
+                    <h1>Sign Up</h1>
+                </section>
                 <label >It's free and always will be</label>
                 <div class="input-box">
                     <div class="input-box-1" > 
@@ -66,7 +72,7 @@
                     <label >Birthday</label>
                     <div class="date">
                         <select name="list" id="date">
-                            <option value="Date">Date</option>
+                            <option value="Date">Day</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
